# protondb-game-analytics

./: .env.local  .gitignore  Dockerfile  README.md  app.py  deploy.sh  start_app.sh
.streamlit/: config.toml
data/: reports_piiremoved.json-sample.csv
pipeline/: .bruin.yml  pipeline.yml  pyproject.toml
pipeline/assets/ingest/: download_protondb.py  games.asset.yml  ingest_protondb.py  settings.py
